2009-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/auto.tcl  Eliminate "then" keyword
	* library/clock.tcl
	* library/history.tcl
	* library/safe.tcl
	* library/tm.tcl

2009-11-17  Andreas Kupries  <andreask@activestate.com>

	* unix/tclUnixChan.c (TtyParseMode): Partial undo of Donal's tidy-
	up from a few days ago (2009-11-9, not in ChangeLog). strchr is
	apparently a macro on AIX and reacts badly to pre-processor
	directives in its arguments.

2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEncoding.c: (forward port) Fix [Bug 2891556] and improve
	* generic/tclTest.c:      test to detect similar manifestations in the
	* tests/encoding.test:    future. Add tcltest support for finalization.

2009-11-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWinDde.c: Avoid gcc compiler warning by
	explicitly casting DdeCreateStringHandle argument.

2009-11-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): [Bug 2895565]. Dropped bogosity
	* tests/io.test: which used the number of _written_ bytes or
	character to update the counters for the read bytes/characters.
	New test io-53.11. This is a forward port from the 8.5 branch.

2009-11-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclClock.c (TclClockInit):    Do not create [clock] support
	commands in safe interps.

2009-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/http/http.tcl (http::geturl): [Bug 2891171]: URl
	checking too strict when using multiple question marks
	* tests/http.test
	* library/http/pkgIndex.tcl:  Bump to http 2.8.2
	* unix/Makefile.in:
	* win/Makefile.in:

2009-11-11  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclIO.c: Fix [Bug 2888099] (close discards ENOSPC error)
	                   by saving the errno from the first of two
	                   FlushChannel()s. Uneasy to test; might need
	                   specific channel drivers. Four-hands with aku.
