@@ -3,7 +3,7 @@
 static Tcl_ThreadDataKey key;
 
 typedef struct {
-    int value;  
+    int value;
 } TsdPerf;
 
 
@@ -20,16 +20,16 @@ tsdPerfSetObjCmd(ClientData cdata, Tcl_Interp *interp, int objc, Tcl_Obj *const 
     if (TCL_OK != Tcl_GetIntFromObj(interp, objv[1], &i)) {
 	return TCL_ERROR;
     }
-    
+
     perf->value = i;
-       
+
     return TCL_OK;
 }
 
 int tsdPerfGetObjCmd(ClientData cdata, Tcl_Interp *interp, int objc, Tcl_Obj *const *objv) {
     TsdPerf *perf = Tcl_GetThreadData(&key, sizeof(TsdPerf));
 
-    
+
     Tcl_SetObjResult(interp, Tcl_NewIntObj(perf->value));
 
     return TCL_OK;
@@ -41,7 +41,7 @@ Tsdperf_Init (Tcl_Interp *interp) {
     if (NULL == Tcl_InitStubs(interp, TCL_VERSION, 0)) {
 	return TCL_ERROR;
     }
-    
+
 
     Tcl_CreateObjCommand(interp, "tsdPerfSet", tsdPerfSetObjCmd, (ClientData)NULL,
 			 (Tcl_CmdDeleteProc *)NULL);
